--- a/src/index.njk
+++ b/src/index.njk
@@ -6,8 +6,8 @@ layout: layouts/blank.njk
   <div class="row d-flex justify-content-center">
     <div class="col-12 col-lg-8 my-4 text-center">
       <h1 class="display-1">
-        Welcome to the
-        <strong>11straps</strong>
+        Selamat datang di
+        <strong>FIKALEFAZA</strong>
         demo website!
       </h1>
       <p class="lead mb-4">It combines the static website generator Eleventy & the CSS framework Bootstrap 5.</p>
